--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             
             <nav>
                 <ul>
+                    <li><a href="spongebob.html">sponge</a></l>
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
