--- a/overmij.html
+++ b/overmij.html
@@ -12,11 +12,12 @@
         <main>
             <header>
                 <h1>Wil je meer van mij weten?</h1>
-                <br>
+                
             </header>
             
             <nav>
                 <ul>
+                    <li><a href="spongebob.html">sponge</a></l>
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
