--- a/spongebob.html
+++ b/spongebob.html
@@ -14,13 +14,14 @@
                 
             </header>
             
-            <nav>
+            <nav class="navigatie">
             <h1>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="overmij.html">Over mij</a></li>
                     <li><a href="info.html">Informatie</a></li>
                     <li><a class="active" href="spongebob.html">sponge</a></l>
+                    <li><a href="spongebob's house.html"> the house </a></li>
                 </ul>
                 </1>
             </nav>
