Lyrics fout en charset verandering
Signed-off-by: Jakino7 <112291@emmauscollege.nl>

--- a/animator.html
+++ b/animator.html
@@ -17,7 +17,7 @@
             <nav class="navigatie">
             <h1>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="spongecrew.html">Spongebob crew</a></li>
                     <li><a class="active" href="animator.html">de animator</a></li>
                     <li><a href="huizen.html"> de huizen</a></li>
