--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="navigatie">
             <h1>
                 <ul>
-                    <li><a class="active" href="home.html">Home</a></li>
+                    <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="spongecrew.html">Spongebob crew</a></li>
                     <li><a href="animator.html">de animator</a></li>
                     <li><a href="huizen.html"> de huizen </a></li>
