--- a/spongecrew.html
+++ b/spongecrew.html
@@ -18,7 +18,7 @@
             <nav class="navigatie">
             <h1>
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="spongecrew.html">Spongebob crew</a></li>
                     <li><a href="animator.html">de animator</a></li>
                     <li><a href="huizen.html"> de huizen </a></li>
